Update Vue, Use VueRouter, Add multi-page navigation, Add bg image, - Move all Product stuff from 'index' -> 'page-catalog' - Style up basic text page content

--- a/index.html
+++ b/index.html
@@ -9,7 +9,12 @@
 </head>
 <body>
 <div id="appTarget"></div>
-<script src="https://unpkg.com/vue@2.2.6"></script>
+<script src="https://unpkg.com/vue@2.3.3"></script>
+<script src="https://unpkg.com/vue-router@2.5.3"></script>
+<script src="page-news.js"></script>
+<script src="page-catalog.js"></script>
+<script src="page-faq.js"></script>
+<script src="page-contact.js"></script>
 <script src="./index.js"></script>
 </body>
 </html>
