--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 	<link href="https://fonts.googleapis.com/css?family=Roboto+Condensed" rel="stylesheet" />
 	<link rel="stylesheet" href="./styles.css" />
 </head>
-<body>
+<body class="clicked">
 <div id="appTarget"></div>
 <script src="https://unpkg.com/vue@2.3.3"></script>
 <script src="https://unpkg.com/vue-router@2.5.3"></script>
