--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body class="clicked">
 <div id="appTarget"></div>
-<script type="text/javascript" src="https://cdn.rawgit.com/stowball/mqGenie/2db8b252/mq.genie.min.js"></script>
+<script type="text/javascript" src="https://unpkg.com/mq-genie@1.0.0/mq.genie.min.js"></script>
 <script src="https://unpkg.com/vue@2.3.3"></script>
 <script src="https://unpkg.com/vue-router@2.5.3"></script>
 <script src="page-info.js"></script>
