--- a/index.html
+++ b/index.html
@@ -12,6 +12,10 @@
 <script type="text/javascript" src="https://unpkg.com/mq-genie@1.0.0/mq.genie.min.js"></script>
 <script src="https://unpkg.com/vue@2.3.3"></script>
 <script src="https://unpkg.com/vue-router@2.5.3"></script>
+<script>let module = {}; //yo dawg i herd u leik module loading</script>
+<script type="text/javascript" src="https://unpkg.com/load-script@1.0.0/index.js"></script>
+<script>window.loadScript = module.exports</script>
+<script type="text/javascript" src="https://unpkg.com/vue-analytics@^4.1.2/dist/vue-analytics.js"></script>
 <script src="page-info.js"></script>
 <script src="page-catalog.js"></script>
 <script src="page-order.js"></script>
