--- a/index.html
+++ b/index.html
@@ -15,7 +15,9 @@
 <script>let module = {}; //yo dawg i herd u leik module loading</script>
 <script type="text/javascript" src="https://unpkg.com/load-script@1.0.0/index.js"></script>
 <script>window.loadScript = module.exports</script>
-<script type="text/javascript" src="https://unpkg.com/vue-analytics@4.1.2/dist/vue-analytics.js"></script>
+<script>let exports = {}; module = {}; //what the double hell? if exports exists, it populates module.exports???</script>
+<script type="text/javascript" src="https://unpkg.com/vue-analytics@4.2.2/dist/vue-analytics.js"></script>
+<script>window.VueAnalytics = module.exports.default</script>
 <script src="page-info.js"></script>
 <script src="page-catalog.js"></script>
 <script src="page-order.js"></script>
