Preliminary play page (SVG click and drag)

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 <script src="https://unpkg.com/vue@2"></script>
 <script src="https://unpkg.com/vue-router@3"></script>
 <script src="data.js"></script>
+<script src="page-play.js"></script>
 <script src="page-info.js"></script>
 <script src="page-catalog.js"></script>
 <script src="page-order.js"></script>
